--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <a class="navbar-link" href="http://127.0.0.1:5500/index.html#">Home</a>
             </li> 
             <li class="nav-item">
-                <a class="navbar-link" href="http://127.0.0.1:5500/nutrition.html#">Nutrition</a>
+                <a class="navbar-link" href="https://trogdorbane.github.io/RevolutionFitness/nutrition">Nutrition</a>
             </li>
             <li class="nav-item">
                 <a class="navbar-link" href="http://127.0.0.1:5500/training.html#">Training</a>
