--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
     <div class="collapse navbar-collapse" id="collapse-target">     
         <ul class="navbar-nav flex-row">
             <li class="nav-item">
-                <a class="navbar-link" href="http://127.0.0.1:5500/index.html#">Home</a>
+                <a class="navbar-link" href="https://trogdorbane.github.io/RevolutionFitness">Home</a>
             </li> 
             <li class="nav-item">
                 <a class="navbar-link" href="https://trogdorbane.github.io/RevolutionFitness/nutrition">Nutrition</a>
             </li>
             <li class="nav-item">
-                <a class="navbar-link" href="http://127.0.0.1:5500/training.html#">Training</a>
+                <a class="navbar-link" href="https://trogdorbane.github.io/RevolutionFitness/training">Training</a>
             </li>
             <li class="nav-item">
                 <a class="navbar-link" href="#">Coaching</a>
