--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <p>revolutionfitness@gmail.com</p>
     </div>
     <div class="col-md-6 mt-5">
-        <ul class="navbar-nav flex-row">
+        <ul class="navbar-nav flex-row justify-content-center">
             <li>
                   <a href="www.facebook.com"><i class="fab fa-facebook"></i></a>
             </li>
