--- a/index.html
+++ b/index.html
@@ -63,28 +63,28 @@
         </div>
     </div>
 
- <hr>  
+  
+ <div class="container-fluid">
+     <hr>
 <div class="row">
     <div class="col-md-4">
         <i class="far fa-lemon"></i>
         <h3 id="orange">Nutrition</h3>
-        <hr>
         <p class="lead">Find out which foods are the best for achieving optimal body 
              <b>composition</b> </p>
     </div>
     <div class="col-md-4">
             <img id="heart" src="images/health.png" alt="">
             <h3 id="red">Health</h3>
-            <hr>
             <p class="lead">Exercise will benefits your health in multiple ways</p>
     </div>
     <div class="col-md-4">
             <img id="running" src="images/running.png" alt="">
             <h3>Training</h3>
-            <hr>
             <p class="lead">Learn what type of training is suitable for you , custom tailored !</p>
     </div>
 </div>
+</div> 
 <div class="hero2">
    <div class="landing-text">
        <h2>Don't wait for tomorrow</h2>
